# pyside6-qcustomplot-mingw64

./: CMakeLists.txt  README.md
example/: demo.py
src/: bindings.xml
